decorator pattern example + added junit tests and configuration